Adding Image icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/free-vector/friends-video-calling-illustration_23-2148502734.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discussions Through Video - by RUPENDRA</title>
   </head>
